--- a/tsconfig.publish.json
+++ b/tsconfig.publish.json
@@ -1,6 +1,10 @@
 {
     "extends": "./tsconfig",
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "package.json",
+        "index.ts"
+    ],
+    "exclude": [
     ]
 }
